--- a/table.html
+++ b/table.html
@@ -61,6 +61,23 @@
             </tr>
         </table>
 
+        <h1>BAŞLIK SATIR</h1>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Başlık 1</th>
+                    <th>Başlık 2</th>
+                </tr> 
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Normal 1</td>
+                    <td>Normal 2</td>
+                </tr>
+            </tbody>
+
+        </table>
+
 
 
     </body>
