--- a/tasarim.html
+++ b/tasarim.html
@@ -19,5 +19,23 @@
             <span class="kirmizi">ÜNİ</span>VERSİTESİ
         </div>
         <div id="kirmizi">KAZAN MYO</div>
+
+  <div class="genel">
+    WEB TASARIMININ TEMELLERİ 
+    <div class="genel">AAAA
+        <div class="genel">BBBBCCCC</div>
+    </div>
+  </div>
+
+<hr/>
+  <div class="genel1">
+    <div class="mrg">AAA</div>
+  </div>
+
+  <hr/>
+  <div class="genel1">
+    <div class="pdd">AAA sçöfdmds ççöfds mxsçöf msçöfm xs lkö sdmf lk</div>
+  </div>
+
     </body>
 </html>
