--- a/tasarim.html
+++ b/tasarim.html
@@ -36,6 +36,20 @@
   <div class="genel1">
     <div class="pdd">AAA sçöfdmds ççöfds mxsçöf msçöfm xs lkö sdmf lk</div>
   </div>
+<hr />
+
+  <div class="anaDiv text">
+    Gazi Üniversitesi
+    <div class="altDiv">Tuşaş Kazan Meslek Yüksekokulu</div>
+  </div>
+<p>Bilgisayar</p>
+
+
+<hr />
+<div class="background">
+  
+</div>
+
 
     </body>
 </html>
