--- a/js.html
+++ b/js.html
@@ -56,10 +56,10 @@
                 else if(islem==3){//TOPLAMA
                     sonuc = val1+val2
                 }
-                else if(islem==4){
+                else if(islem==4){//ÇIKARTMA
                     sonuc=val1-val2
                 }
-                else {//ÇIKARTMA
+                else {
                     alert("tanımsız istek")
                 }   
                 sonucYazdir(sonuc)
