--- a/jsfor.html
+++ b/jsfor.html
@@ -78,8 +78,23 @@ listeDegisken = [
 */
 
 
-        </script>
+        // ÇARPIM TABLOSU
 
+        </script>
+<table border="1">
+    <script>
+
+        for(var i = 1; i<=10; i++){
+            document.write("<tr>")
+                for(var j=1; j<=10; i++){
+                    document.write('<td>'+i*j+'</td>')
+                }
+                document.write("</tr>")
+        }
+    </script>
+    
+    
+</table>
 
 
 
